--- a/src/jobs_worker/Dockerfile
+++ b/src/jobs_worker/Dockerfile
@@ -1,19 +1,19 @@
 FROM python:3.11-slim
 
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
+
 WORKDIR /app
 
-# System deps (kept minimal)
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    ca-certificates \
-  && rm -rf /var/lib/apt/lists/*
+# Install runtime deps
+COPY src/jobs_worker/requirements.txt /app/requirements.txt
+RUN pip install --no-cache-dir -r /app/requirements.txt
 
-# Copy shared + worker
-COPY src/shared /app/src/shared
-COPY src/jobs_worker /app/src/jobs_worker
+# Copy code (including shared package)
+COPY src/shared /app/shared
+COPY src/jobs_worker /app/jobs_worker
 
-# Install deps
-RUN pip install --no-cache-dir -r /app/src/jobs_worker/requirements.txt \
- && pip install --no-cache-dir -e /app/src/shared
+# Ensure /app is on PYTHONPATH so "shared" can be imported
+ENV PYTHONPATH=/app
 
-# Run
 CMD ["python", "-m", "jobs_worker.worker"]
