Production readiness complete
- Application Insights monitoring enabled
- Database backups configured (7-day retention)
- Security reviewed and documented
- Auto-scaling configured for all services
- Comprehensive production checklist created
- Ready for Phase 2: Azure AI Vision integration

Documentation:
- DEPLOYMENT-SUMMARY.md
- database-backup-restore.md
- api-security.md
- autoscaling-config.md
- production-checklist.md
- test-pipeline.ps1

--- a/ml/deployment-stub.yml
+++ b/ml/deployment-stub.yml
@@ -2,9 +2,12 @@ $schema: https://azuremlschemas.azureedge.net/latest/managedOnlineDeployment.sch
 name: blue
 endpoint_name: opal-sd-placement-dev
 model: azureml:noop-model:1
+code_configuration:
+  code: ./noop-model
+  scoring_script: score.py
 environment:
-  image: ${ACR_LOGIN_SERVER}/opal/aml-sd-stub:${IMAGE_TAG}
-# For stub: use cheap CPU instance instead of expensive GPU
+  conda_file: ./noop-model/conda.yml
+  image: mcr.microsoft.com/azureml/openmpi4.1.0-ubuntu20.04:latest
 instance_type: Standard_DS2_v2
 instance_count: 1
 request_settings:
