--- a/src/orchestrator/requirements.txt
+++ b/src/orchestrator/requirements.txt
@@ -7,3 +7,5 @@ azure-storage-blob==12.22.0
 azure-servicebus==7.12.2
 httpx==0.27.2
 tenacity==8.2.3
+
+rembg[gpu]==2.0.57  # Background removal (CPU optimized)
