--- a/src/orchestrator/requirements.txt
+++ b/src/orchestrator/requirements.txt
@@ -9,3 +9,5 @@ httpx==0.27.2
 tenacity==8.2.3
 
 rembg[gpu]==2.0.57  # Background removal (CPU optimized)
+
+Pillow==10.2.0  # Image processing and compositing
