--- a/src/orchestrator/requirements.txt
+++ b/src/orchestrator/requirements.txt
@@ -11,3 +11,13 @@ tenacity==8.2.3
 rembg[gpu]==2.0.57  # Background removal (CPU optimized)
 
 Pillow==10.2.0  # Image processing and compositing
+
+# Real-ESRGAN for upscaling
+realesrgan==0.3.0
+basicsr==1.4.2
+facexlib==0.3.0
+gfpgan==1.3.8
+numpy==1.24.3
+opencv-python==4.8.1.78
+torch==2.0.1
+torchvision==0.15.2
