--- a/src/orchestrator/Dockerfile
+++ b/src/orchestrator/Dockerfile
@@ -1,5 +1,11 @@
 FROM python:3.11-slim
 
+# Install system dependencies for OpenCV and Real-ESRGAN
+RUN apt-get update && apt-get install -y \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
+    && rm -rf /var/lib/apt/lists/*
+
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     PYTHONPATH=/app
