--- a/netlify.toml
+++ b/netlify.toml
@@ -1,18 +1,18 @@
 [build]
-  base = "frontend"
-  publish = "frontend/dist"
-  command = "npm run build"
+base = "frontend"
+publish = "dist"
+command = "npm run build"
 
 [build.environment]
-  NODE_VERSION = "18"
+NODE_VERSION = "18"
 
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+from = "/*"
+to = "/index.html"
+status = 200
 
 [dev]
-  command = "npm run dev"
-  port = 5173
-  targetPort = 5173
-  autoLaunch = false
+command = "npm run dev"
+port = 5173
+targetPort = 5173
+autoLaunch = false
